① 替换快捷送请求地址 ② 修改包文件生成格式

--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,8 @@ android {
                 } else {
                     output.outputFile = new File(
                             output.outputFile.parent,
-                            ("mgjclient-${variant.name}-${variant.versionName}-" + buildTime() + ".apk").toLowerCase())
+                            ("mgjclient-${variant.name}-${variant.versionName}" + ".apk").toLowerCase())
+//                            ("mgjclient-${variant.name}-${variant.versionName}-" + buildTime() + ".apk").toLowerCase())
                 }
                 if (output.zipAlign != null) {
                     output.zipAlign.doLast {
