① 替换百度地图sdk appkey ② 替换原有签名文件

--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,10 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("maguanjia.jks")
-            storePassword 'maguanjia'
-            keyAlias 'maguanjia'
-            keyPassword 'maguanjia'
+            storeFile file('zywl.jks')
+            keyAlias '众盈彩票'
+            keyPassword '123456'
+            storePassword '123456'
         }
     }
     buildTypes {
